Changing objects instantion to builder for readability, adding dedicated object converter class.